--- a/.github/workflows/windows-nuitkaOptimized.yml
+++ b/.github/workflows/windows-nuitkaOptimized.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Versão (tag) ex.: v0.0.5"
+        description: "Versão (tag) ex.: v0.1.5"
         required: true
         type: string
       tag_repository:
@@ -25,17 +25,11 @@ jobs:
 
     steps:
 
-    # ------------------------------------------------------------
-    # CHECKOUT
-    # ------------------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    # ------------------------------------------------------------
-    # VARIÁVEIS DE VERSÃO
-    # ------------------------------------------------------------
     - name: Compute version and names
       shell: pwsh
       run: |
@@ -49,15 +43,12 @@ jobs:
           $ver = "dev-${{ github.run_number }}"
         }
 
-        "APP_VER=$ver" | Out-File $env:GITHUB_ENV -Append
+        "APP_VER=$ver"           | Out-File $env:GITHUB_ENV -Append
         "APP_NAME=EININDII05_PACTware_ProcessSimul" | Out-File $env:GITHUB_ENV -Append
 
         Write-Host "Versão: $ver"
         Write-Host "Nome do app: EININDII05_PACTware_ProcessSimul"
 
-    # ------------------------------------------------------------
-    # CRIAR TAG
-    # ------------------------------------------------------------
     - name: Create & push tag
       if: ${{ github.event_name == 'workflow_dispatch' && inputs.tag_repository }}
       shell: bash
@@ -67,9 +58,6 @@ jobs:
         git tag -a "${APP_VER}" -m "Release ${APP_VER}" || true
         git push origin "${APP_VER}" || true
 
-    # ------------------------------------------------------------
-    # PYTHON + DEPENDÊNCIAS
-    # ------------------------------------------------------------
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
@@ -78,13 +66,10 @@ jobs:
     - name: Install dependencies
       shell: pwsh
       run: |
-        python -m pip install --upgrade pip wheel setuptools
+        pip install -U pip wheel setuptools
         pip install -r requirements.txt
         pip install nuitka ordered-set zstandard
 
-    # ------------------------------------------------------------
-    # COMPILAÇÃO COM NUITKA (OTIMIZADA + COMPATÍVEL COM CONTROL)
-    # ------------------------------------------------------------
     - name: Build EXE with Nuitka (Optimized)
       shell: pwsh
       run: |
@@ -108,92 +93,57 @@ jobs:
           --output-dir=dist `
           main.py
 
-        Write-Host "=== Conteúdo dist ==="
         Get-ChildItem dist -Recurse
 
-    # ------------------------------------------------------------
-    # DETECTAR .DIST
-    # ------------------------------------------------------------
     - name: Detect Nuitka output dir
       id: detect_dist
       shell: pwsh
       run: |
         $dirs = Get-ChildItem dist -Directory
-
-        Write-Host "Pastas encontradas em dist/:"
-        $dirs | ForEach-Object { Write-Host $_.Name }
-
         $d = $dirs | Where-Object { $_.Name -match "dist" } | Select-Object -First 1
-
-        if (-not $d) {
-          throw "Nenhuma pasta contendo 'dist' encontrada em dist/. Abortando."
-        }
+        if (-not $d) { throw "Nenhuma pasta com 'dist' encontrada" }
 
         "DIST_DIR=dist\$($d.Name)" | Out-File $env:GITHUB_ENV -Append
-        Write-Host "DIST_DIR detectado automaticamente: dist\$($d.Name)"
+        Write-Host "Usando DIST_DIR=$env:DIST_DIR"
 
-    # ------------------------------------------------------------
-    # RENOMEAR EXECUTÁVEL
-    # ------------------------------------------------------------
     - name: Rename EXE inside .dist
       shell: pwsh
       run: |
         $exe = Get-ChildItem -Recurse "${{ env.DIST_DIR }}" -Filter "*.exe" | Select-Object -First 1
-        if (-not $exe) { throw "Nenhum EXE encontrado na pasta .dist" }
+        if (-not $exe) { throw "Nenhum EXE encontrado" }
+        Move-Item $exe.FullName "$($exe.Directory.FullName)\${{ env.APP_NAME }}.exe" -Force
 
-        $newpath = Join-Path $exe.Directory.FullName "${{ env.APP_NAME }}.exe"
-        Move-Item $exe.FullName $newpath -Force
-        Write-Host "Renomeado para: $newpath"
-
-    # ------------------------------------------------------------
-    # INSTALAR NSIS
-    # ------------------------------------------------------------
     - name: Install NSIS
       shell: pwsh
       run: |
         choco install nsis -y
-        $nsis = "${env:ProgramFiles(x86)}\NSIS\makensis.exe"
-        if (!(Test-Path $nsis)) { throw "NSIS não encontrado" }
-        "NSIS_EXE=$nsis" | Out-File $env:GITHUB_ENV -Append
+        $path = "${env:ProgramFiles(x86)}\NSIS\makensis.exe"
+        if (!(Test-Path $path)) { throw "NSIS não encontrado!" }
+        "NSIS_EXE=$path" | Out-File $env:GITHUB_ENV -Append
 
-    # ------------------------------------------------------------
-    # PROCESSAR installer.nsi
-    # ------------------------------------------------------------
     - name: Prepare installer script
       shell: pwsh
       run: |
         Copy-Item installer/installer.nsi installer_parsed.nsi -Force
 
         (Get-Content installer_parsed.nsi) `
-          -replace '\$\{APP_VERSION\}', '${{ env.APP_VER }}' `
-          -replace '\$\{APP_NAME\}', '${{ env.APP_NAME }}' `
+          -replace '\$\{APP_NAME\}',     '${{ env.APP_NAME }}' `
+          -replace '\$\{APP_VERSION\}',  '${{ env.APP_VER }}' `
+          -replace '\$\{DIST_DIR\}',     '${{ env.DIST_DIR }}' `
           | Set-Content installer_parsed.nsi
 
-        Write-Host "installer_parsed.nsi pronto"
-
-    # ------------------------------------------------------------
-    # GERAR INSTALADOR FINAL
-    # ------------------------------------------------------------
     - name: Build Installer (NSIS)
       shell: pwsh
       run: |
         & "${{ env.NSIS_EXE }}" installer_parsed.nsi
-
-        Write-Host "Arquivos finais:"
         Get-ChildItem . -Filter "setup_*.exe"
 
-    # ------------------------------------------------------------
-    # ARTEFATO
-    # ------------------------------------------------------------
     - name: Upload installer artifact
       uses: actions/upload-artifact@v4
       with:
         name: installer-${{ env.APP_VER }}
         path: setup_*.exe
 
-    # ------------------------------------------------------------
-    # RELEASE
-    # ------------------------------------------------------------
     - name: Publish Release
       if: ${{ inputs.publish_release }}
       uses: softprops/action-gh-release@v2
